--- a/src/main/webapp/app/entities/eleve/eleve.component.html
+++ b/src/main/webapp/app/entities/eleve/eleve.component.html
@@ -1,8 +1,31 @@
 
 <jhi-critere-recherche></jhi-critere-recherche>
+<div class=" container-fluid mb-3">
+    <ul class="nav nav-tabs nav-justified">    
+      <!--- Menu pour une recherche d'éléve-->  
+      <li class="nav-item">
+          <a  [class.active]="critereRechercheService.ongletActive=='resume'" [class.nav-link]='true' (click)="ongletActif('resume')"   jhiTranslate="outilDiagnostic.critereRecherche.resume"></a>
+        </li>
+      <li class="nav-item" >
+          <a [class.active]="critereRechercheService.ongletActive=='siecle'" [class.nav-link]='true'  (click)="ongletActif('siecle')"  jhiTranslate="outilDiagnostic.critereRecherche.ldapSiecle"></a>
+      </li>
+      <li class="nav-item">
+            <a  [class.active]="critereRechercheService.ongletActive=='aaf'" [class.nav-link]='true' (click)="ongletActif('aaf')"  jhiTranslate="outilDiagnostic.critereRecherche.ldapAaf"></a>
+      </li>
+      <li class="nav-item" >
+            <a  [class.active]="critereRechercheService.ongletActive=='toutatice'" [class.nav-link]='true' (click)="ongletActif('toutatice')"  jhiTranslate="outilDiagnostic.critereRecherche.ldapToutatice"></a>
+      </li>
+      <li class="nav-item">
+          <a  [class.active]="critereRechercheService.ongletActive=='eduConnect'" [class.nav-link]='true' (click)="ongletActif('eduConnect')"  jhiTranslate="outilDiagnostic.critereRecherche.ldapEduConnect"></a>
+      </li>
+      <li class="nav-item">
+        <a  [class.active]="critereRechercheService.ongletActive=='aten'" [class.nav-link]='true' (click)="ongletActif('aten')"   jhiTranslate="outilDiagnostic.critereRecherche.ldapAten"></a>
+      </li>
+    </ul>
+</div>
 <div class="container">
     <!-- onglet resume-->
-        <div *ngIf="ongletActive=='resume'">
+        <div *ngIf="critereRechercheService.ongletActive=='resume'">
             <div class="row">
                 <div class="col-sm-12 align-self-center">
                     <h4 jhiTranslate="outilDiagnostic.critereRecherche.ldapSiecle"></h4>
@@ -21,18 +44,18 @@
                             </thead>
                             <tbody>
                                 <tr *ngFor="let eleve of eleves">
-                                    <ng-template [ngIf]="eleve.nomSiecle!=null || eleve.prenomSiecle!=null || eleve.identifiantSiecle!=null || eleve.dateNaissanceSiecle!=null || eleve.etablissementSiecle!=null ||eleve.representantLegalSiecle!=[]">
+                                    <ng-template [ngIf]="eleve.nomSiecle!=null  || eleve.prenomSiecle!=null || eleve.identifiantSiecle!=null || eleve.dateNaissanceSiecle!=null || eleve.etablissementSiecle!=null || eleve.representantLegalSiecle.length!=0">
                                         <td>{{eleve.nomSiecle}}</td>
                                         <td>{{eleve.prenomSiecle}}</td>
                                         <td>{{eleve.identifiantSiecle}}</td>
                                         <td>{{eleve.dateNaissanceSiecle}}</td>
                                         <td>{{eleve.etablissementSiecle}}</td>
                                         <td>
-                                                <tr *ngIf="eleve.representantLegalSiecle!=[]">
-                                                   <td  *ngFor="let representant of eleve.representantLegalSiecle">{{representant}}</td>
-                                               </tr>
-                                           </td> 
-                                        <td  class="text-right"><a href="#" class="btn btn-sm btn-info"><i jhiTranslate="outilDiagnostic.eleve.detail" class="fa fa-eye"></i></a></td>
+                                            <tr *ngIf="eleve.representantLegalSiecle.length!=0">
+                                                <td  *ngFor="let representant of eleve.representantLegalSiecle">{{representant.nom }} {{representant.prenom}}</td>
+                                            </tr>
+                                        </td> 
+                                        <td  class="text-right"><a (click)="afficheDetail(eleve,'siecle')" class="btn btn-sm btn-info"><i jhiTranslate="outilDiagnostic.eleve.detail" class="fa fa-eye"></i></a></td>
                                     </ng-template>
                                 </tr>
                             </tbody>  
@@ -63,7 +86,7 @@
                                         <td>{{eleve.dateNaissanceAaf}}</td>
                                         <td>{{eleve.etablissementAaf}}</td> 
                                         <td>{{eleve.classeAaf}}</td>   
-                                        <td class="text-right"><a href="#" class="btn btn-sm btn-info"><i jhiTranslate="outilDiagnostic.eleve.detail" class="fa fa-eye"></i></a></td>
+                                        <td class="text-right"><a (click)="afficheDetail(eleve,'aaf')" class="btn btn-sm btn-info"><i jhiTranslate="outilDiagnostic.eleve.detail" class="fa fa-eye"></i></a></td>
                                     </ng-template>
                                 </tr>
                             </tbody>  
@@ -94,7 +117,7 @@
                                         <td>{{eleve.mailToutatice}}</td>
                                         <td>{{eleve.etatCompteToutatice}}</td>  
                                         <td>{{eleve.lastConToutatice}}</td>  
-                                        <td   class="text-right"><a href="#" class="btn btn-sm btn-info"><i jhiTranslate="outilDiagnostic.eleve.detail" class="fa fa-eye"></i></a></td>
+                                        <td   class="text-right"><a (click)="afficheDetail(eleve,'toutatice')"  class="btn btn-sm btn-info"><i jhiTranslate="outilDiagnostic.eleve.detail" class="fa fa-eye"></i></a></td>
                                 </ng-template>
                                 </tr>
                             </tbody>  
@@ -127,7 +150,7 @@
                                         <td>{{eleve.mailEduconnect}}</td>
                                         <td>{{eleve.etatCompteEduconnect}}</td>  
                                         <td>{{eleve.lastConEduconnect}}</td>  
-                                        <td class="text-right"><a href="#" class="btn btn-sm btn-info"><i jhiTranslate="outilDiagnostic.eleve.detail" class="fa fa-eye"></i></a></td>
+                                        <td class="text-right"><a (click)="afficheDetail(eleve,'Educonnect')" class="btn btn-sm btn-info"><i jhiTranslate="outilDiagnostic.eleve.detail" class="fa fa-eye"></i></a></td>
                                     </ng-template>
                                 </tr>
                             </tbody>  
@@ -151,18 +174,18 @@
                             </thead>
                             <tbody>
                                 <tr *ngFor="let eleve of eleves">
-                                    <ng-template [ngIf]="eleve.nomAten!=null|| eleve.prenomAten!=null|| eleve.identifiantAten !=null||eleve.dateNaissanceAten!=null|| eleve.etablissementAten!=null|| eleve.representantLegalAten!=[]">
+                                    <ng-template [ngIf]="eleve.nomAten!=null|| eleve.prenomAten!=null|| eleve.identifiantAten !=null||eleve.dateNaissanceAten!=null|| eleve.etablissementAten!=null|| eleve.representantLegalAten.length!=0">
                                         <td>{{eleve.nomAten}}</td>
                                         <td>{{eleve.prenomAten}}</td>
                                         <td>{{eleve.identifiantAten}}</td>
                                         <td>{{eleve.dateNaissanceAten}}</td>
                                         <td>{{eleve.etablissementAten}}</td>  
                                         <td>
-                                             <tr *ngIf="eleve.representantLegalAten!=[]">
-                                                 <td  *ngFor="let representant of eleve.representantLegalAten">{{representant}}</td>
+                                             <tr *ngIf="eleve.representantLegalAten!=null">
+                                                 <td  *ngFor="let representant of eleve.representantLegalAten">{{representant.nom}} {{representant.prenom }}</td>
                                             </tr>
                                         </td>   
-                                        <td class="text-right"><a href="#" class="btn btn-sm btn-info"><i jhiTranslate="outilDiagnostic.eleve.detail" class="fa fa-eye"></i></a></td>
+                                        <td class="text-right"><a (click)="afficheDetail(eleve,'aten')" class="btn btn-sm btn-info"><i jhiTranslate="outilDiagnostic.eleve.detail" class="fa fa-eye"></i></a></td>
                                     </ng-template>
                                  </tr>  
                             </tbody>  
@@ -173,13 +196,13 @@
     </div>
     <!-- onglet resume-->
     <!-- onglet siecle-->
-    <div *ngIf="ongletActive=='siecle'">
+    <div *ngIf="critereRechercheService.ongletActive=='siecle'">
             <div class="col-sm-12 align-self-center">
                     <h4 jhiTranslate="outilDiagnostic.critereRecherche.ldapSiecle"></h4>
                     <div class="table-responsive">
                         <table class="table table-sm table-striped table-bordered">
                             <thead class="thead-dark">
-                                <tr><div *ngIf="ongletActive=='aaf'"></div>
+                                <tr><div *ngIf="critereRechercheService.ongletActive=='aaf'"></div>
                                     <th jhiTranslate="outilDiagnostic.eleve.tableauSiecle.nom"></th>
                                     <th jhiTranslate="outilDiagnostic.eleve.tableauSiecle.prenom"></th>
                                     <th jhiTranslate="outilDiagnostic.eleve.tableauSiecle.identifiant"></th>
@@ -191,18 +214,18 @@
                             </thead>
                             <tbody>
                                     <tr *ngFor="let eleve of eleves">
-                                        <ng-template [ngIf]="eleve.nomSiecle!=null || eleve.prenomSiecle!=null || eleve.identifiantSiecle!=null || eleve.dateNaissanceSiecle!=null || eleve.etablissementSiecle!=null ||eleve.representantLegalSiecle!=[]">
+                                        <ng-template [ngIf]="eleve.nomSiecle!=null || eleve.prenomSiecle!=null || eleve.identifiantSiecle!=null || eleve.dateNaissanceSiecle!=null || eleve.etablissementSiecle!=null ||eleve.representantLegalSiecle.length!=0">
                                             <td>{{eleve.nomSiecle}}</td>
                                             <td>{{eleve.prenomSiecle}}</td>
                                             <td>{{eleve.identifiantSiecle}}</td>
                                             <td>{{eleve.dateNaissanceSiecle}}</td>
                                             <td>{{eleve.etablissementSiecle}}</td>
                                             <td>
-                                                <tr *ngIf="eleve.representantLegalSiecle!=[]">
-                                                     <td  *ngFor="let representant of eleve.representantLegalSiecle">{{representant}}</td>
+                                                <tr *ngIf="eleve.representantLegalSiecle.length!=0">
+                                                     <td  *ngFor="let representant of eleve.representantLegalSiecle">{{representant.nom}} {{representant.prenom}}</td>
                                                 </tr>
                                             </td>  
-                                            <td  class="text-right"><a href="#" class="btn btn-sm btn-info"><i jhiTranslate="outilDiagnostic.eleve.detail" class="fa fa-eye"></i></a></td>
+                                            <td  class="text-right"><a (click)="afficheDetail(eleve,'siecle')" class="btn btn-sm btn-info"><i jhiTranslate="outilDiagnostic.eleve.detail" class="fa fa-eye"></i></a></td>
                                         </ng-template>
                                     </tr>
                                 </tbody> 
@@ -213,7 +236,7 @@
     <!-- onglet siecle-->
 
      <!-- onglet aaf-->
-    <div *ngIf="ongletActive=='aaf'">
+    <div *ngIf="critereRechercheService.ongletActive=='aaf'">
             <div class="col-sm-12 align-self-center">
                     <h4 jhiTranslate="outilDiagnostic.critereRecherche.ldapAaf"></h4>
                     <div class="table-responsive">
@@ -238,7 +261,7 @@
                                             <td>{{eleve.dateNaissanceAaf}}</td>
                                             <td>{{eleve.etablissementAaf}}</td> 
                                             <td>{{eleve.classeAaf}}</td>   
-                                            <td class="text-right"><a href="#" class="btn btn-sm btn-info"><i jhiTranslate="outilDiagnostic.eleve.detail" class="fa fa-eye"></i></a></td>
+                                            <td class="text-right"><a (click)="afficheDetail(eleve,'aaf')"  class="btn btn-sm btn-info"><i jhiTranslate="outilDiagnostic.eleve.detail" class="fa fa-eye"></i></a></td>
                                         </ng-template>
                                     </tr>
                                 </tbody>  
@@ -249,7 +272,7 @@
      <!-- onglet aaf-->
 
       <!-- onglet toutatice-->
-    <div *ngIf="ongletActive=='toutatice'">
+    <div *ngIf="critereRechercheService.ongletActive=='toutatice'">
             <div class="col-sm-12 align-self-center">
                     <h4 jhiTranslate="outilDiagnostic.critereRecherche.ldapToutatice"></h4>
                     <div class="table-responsive">
@@ -274,7 +297,7 @@
                                             <td>{{eleve.mailToutatice}}</td>
                                             <td>{{eleve.etatCompteToutatice}}</td>  
                                             <td>{{eleve.lastConToutatice}}</td>  
-                                            <td   class="text-right"><a href="#" class="btn btn-sm btn-info"><i jhiTranslate="outilDiagnostic.eleve.detail" class="fa fa-eye"></i></a></td>
+                                            <td   class="text-right"><a  (click)="afficheDetail(eleve,'toutatice')" class="btn btn-sm btn-info"><i jhiTranslate="outilDiagnostic.eleve.detail" class="fa fa-eye"></i></a></td>
                                         </ng-template>
                                     </tr>
                                 </tbody>    
@@ -284,7 +307,7 @@
     </div>
      <!-- ongglet toutatice-->
      <!-- onglet eduConnect-->
-    <div *ngIf="ongletActive=='eduConnect'">
+    <div *ngIf="critereRechercheService.ongletActive=='eduConnect'">
             <div class="col-sm-12 align-self-center">
                     <h4 jhiTranslate="outilDiagnostic.critereRecherche.ldapEduConnect"></h4>
                     <div class="table-responsive">
@@ -309,7 +332,7 @@
                                             <td>{{eleve.mailEduconnect}}</td>
                                             <td>{{eleve.etatCompteEduconnect}}</td>  
                                             <td>{{eleve.lastConEduconnect}}</td>  
-                                            <td class="text-right"><a href="#" class="btn btn-sm btn-info"><i jhiTranslate="outilDiagnostic.eleve.detail" class="fa fa-eye"></i></a></td>
+                                            <td class="text-right"><a  (click)="afficheDetail(eleve,'Educonnect')" class="btn btn-sm btn-info"><i jhiTranslate="outilDiagnostic.eleve.detail" class="fa fa-eye"></i></a></td>
                                         </ng-template>
                                     </tr>
                                 </tbody> 
@@ -319,7 +342,7 @@
     </div>
     <!-- ongglet eduConnect-->
     <!-- ongglet aten-->
-    <div *ngIf="ongletActive=='aten'">
+    <div *ngIf="critereRechercheService.ongletActive=='aten'">
             <div class="col-sm-12 align-self-center">
                     <h4 jhiTranslate="outilDiagnostic.critereRecherche.ldapAten"></h4>
                     <div class="table-responsive">
@@ -337,18 +360,18 @@
                             </thead>
                             <tbody>
                                     <tr *ngFor="let eleve of eleves">
-                                        <ng-template [ngIf]="eleve.nomAten!=null|| eleve.prenomAten!=null|| eleve.identifiantAten !=null||eleve.dateNaissanceAten!=null|| eleve.etablissementAten!=null">
+                                        <ng-template [ngIf]="eleve.nomAten!=null|| eleve.prenomAten!=null|| eleve.identifiantAten !=null||eleve.dateNaissanceAten!=null|| eleve.etablissementAten!=null || eleve.representantLegalAten.length!=0">
                                             <td>{{eleve.nomAten}}</td>
                                             <td>{{eleve.prenomAten}}</td>
                                             <td>{{eleve.identifiantAten}}</td>
                                             <td>{{eleve.dateNaissanceAten}}</td>
                                             <td>{{eleve.etablissementAten}}</td>  
                                             <td>
-                                                <tr *ngIf="eleve.representantLegalAten!=null">
-                                                    <td  *ngFor="let representant of eleve.representantLegalAten">{{representant}}</td>
+                                                <tr *ngIf="eleve.representantLegalAten.length!=0">
+                                                    <td  *ngFor="let representant of eleve.representantLegalAten">{{representant.nom}} {{representant.prenom}}</td>
                                                 </tr>
                                             </td>  
-                                            <td class="text-right"><a href="#" class="btn btn-sm btn-info"><i jhiTranslate="outilDiagnostic.eleve.detail" class="fa fa-eye"></i></a></td>
+                                            <td class="text-right"><a (click)="afficheDetail(eleve,'aten')" class="btn btn-sm btn-info"><i jhiTranslate="outilDiagnostic.eleve.detail" class="fa fa-eye"></i></a></td>
                                         </ng-template>
                                      </tr>  
                                 </tbody>   
